--- a/app/src/main/res/layout/activity_find_resturant.xml
+++ b/app/src/main/res/layout/activity_find_resturant.xml
@@ -30,16 +30,17 @@
             android:src="@drawable/ic_magnify2"/>
 
         <EditText
+            android:id="@+id/input_search"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_toRightOf="@+id/ic_magnify"
             android:layout_centerVertical="true"
-            android:textSize="15dp"
-            android:textColor="@android:color/black"
-            android:id="@+id/input_search"
+            android:layout_toRightOf="@+id/ic_magnify"
             android:background="@null"
             android:hint="Enter Address, City or Zip Code"
-            android:imeOptions="actionSearch"/>
+            android:imeOptions="actionSearch"
+            android:maxLines="1"
+            android:textColor="@android:color/black"
+            android:textSize="15dp" />
 
     </RelativeLayout>
 
