--- a/app/src/main/res/layout/activity_result_resturant.xml
+++ b/app/src/main/res/layout/activity_result_resturant.xml
@@ -21,6 +21,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="30dp"
             android:text="TextView"
+            android:textAlignment="center"
             android:textAppearance="@style/TextAppearance.AppCompat.Medium"
             android:textColor="@android:color/black"
             app:layout_constraintEnd_toEndOf="parent"
@@ -32,6 +33,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="TextView"
+            android:textAlignment="center"
             android:textAppearance="@style/TextAppearance.AppCompat.Medium"
             app:layout_constraintBottom_toTopOf="@+id/resturantNumber"
             app:layout_constraintEnd_toEndOf="parent"
@@ -46,6 +48,7 @@
             android:layout_marginBottom="37dp"
             android:autoLink="phone"
             android:text="TextView"
+            android:textAlignment="center"
             android:textAppearance="@style/TextAppearance.AppCompat.Medium"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
